<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:orientation="vertical">



    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_card_top"
        android:layout_marginBottom="@dimen/half_card_bottom"
        android:layout_marginLeft="@dimen/card_side"
        android:layout_marginRight="@dimen/card_side"
        app:cardElevation="@dimen/card_elevation"
        style="@style/Widget.MaterialComponents.CardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/current_customer"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/value_dash"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btnRecall"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="onRecall"
                android:text="@string/recall"
                app:strokeColor="@color/colorPrimary" />


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

</LinearLayout>

